--- a/Resources/qrcode.html
+++ b/Resources/qrcode.html
@@ -1,42 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+    <title>iRecycle QRCODE Generator</title>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"><!-- Optional theme -->
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var peso = Math.floor((Math.random() * 30) + 1)
+            var time = new Date().getTime();
+            $(".peso").html("Peso: " + peso + "kg");
+
+            $("#mostraQRCode").html('<img src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl=' + peso + "_fiap_" + time +'" title="Gerador QRCode Google API" />');
+        })
+    </script>
+    <style>
+        body {
+            background-color: palegreen;
+            background-image: url("Recycle-points-icons.png");
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-position: center;
+        }
+
+        div {
+            width: 200px;
+            height: 200px;
+            margin-left: -100px; /* metade da largura */
+            margin-top: -100px; /* metade da altura */
+            position: absolute;
+            top: 50%;
+            left: 45%;
+            background-color: palegreen;
+        }
+
+        .peso {
+            padding-top: 5%;
+        }
+    </style>
 </head>
 <body>
-
-<form name="QRCode_Gerador" id="QRCode_Gerador">
-
-<br/><br/><br/><br/>
-<div>
-	<label>Insira o Peso:</label>
-<input type="text" name="entradaPeso" id="entradaPeso" />
-<input type="button" name="pegaPeso" id="pegaPeso" value="Gerar QRCode" onclick="geraQRCode(document.getElementById('entradaPeso').value)" />
-</div>
-<div id="mostraQRCode">
-
-<script type="text/javascript">
-	
-function geraQRCode(peso){
-
-	//var peso = document.getElementsByName('entradaPeso').value;
-
-	if(peso){
-
-			document.getElementById("mostraQRCode").innerHTML = '<img src="https://chart.googleapis.com/chart?chs=300x300&cht=qr&chl='+peso+'" title="Gerador QRCode Google API" />';
-	}else{
-
-		alert("Preencha o campo do peso");
-		
-	}
-	
-}
-
-
-</script>
-</div>
-
-</form>
-
+    <nav class="navbar navbar-default">
+        <h1 class="text-center">iRecycle QRCode Generator</h1>
+    </nav>
+    <h2 class="text-center peso">Teste</h2>
+    <div id="mostraQRCode"></div>
 </body>
 </html>
